--- a/.github/workflows/robot-tests.yml
+++ b/.github/workflows/robot-tests.yml
@@ -39,14 +39,20 @@ jobs:
       - name: Instalar Google Chrome
         run: sudo apt-get install -y google-chrome-stable
 
-      - name: Instalar Firefox e GeckoDriver
+      - name: Instalar Firefox e GeckoDriver manualmente
         run: |
-          sudo apt-get update
-          sudo apt-get install -y firefox
-          GECKO_VERSION=$(curl -s https://api.github.com/repos/mozilla/geckodriver/releases/latest | grep '"tag_name":' | sed -E 's/.*"v([^"]+)".*/\1/')
-          wget https://github.com/mozilla/geckodriver/releases/download/v$GECKO_VERSION/geckodriver-v$GECKO_VERSION-linux64.tar.gz
-          tar -xzf geckodriver-v$GECKO_VERSION-linux64.tar.gz
-          sudo mv geckodriver /usr/local/bin/
+           # Instala Firefox direto da Mozilla
+           wget -qO firefox.tar.bz2 "https://download.mozilla.org/?product=firefox-latest&os=linux64&lang=pt-BR"
+           tar xjf firefox.tar.bz2
+           sudo mv firefox /opt/firefox
+           sudo ln -sf /opt/firefox/firefox /usr/bin/firefox
+
+           # Instala GeckoDriver compatível
+           GECKO_VERSION=$(curl -s https://api.github.com/repos/mozilla/geckodriver/releases/latest | grep '"tag_name":' | sed -E 's/.*"v([^"]+)".*/\1/')
+           wget -q https://github.com/mozilla/geckodriver/releases/download/v$GECKO_VERSION/geckodriver-v$GECKO_VERSION-linux64.tar.gz
+           tar -xzf geckodriver-v$GECKO_VERSION-linux64.tar.gz
+           chmod +x geckodriver
+           sudo mv geckodriver /usr/local/bin/
 
       - name: Rodar testes Robot em paralelo com Xvfb
         id: run_tests
