--- a/.github/workflows/robot-tests.yml
+++ b/.github/workflows/robot-tests.yml
@@ -39,20 +39,20 @@ jobs:
       - name: Instalar Google Chrome
         run: sudo apt-get install -y google-chrome-stable
 
-      - name: Instalar Firefox e GeckoDriver manualmente
+      - name: Instalar Firefox ESR e GeckoDriver
         run: |
-         # Instala Firefox direto da Mozilla
-         wget -O firefox.tar.bz2 https://ftp.mozilla.org/pub/firefox/releases/latest/linux-x86_64/pt-BR/firefox-*.tar.bz2
-         tar -xjf firefox.tar.bz2
-         sudo mv firefox /opt/firefox
-         sudo ln -sf /opt/firefox/firefox /usr/bin/firefox
+           # Instala Firefox ESR estável
+           wget -O firefox-esr.tar.bz2 https://ftp.mozilla.org/pub/firefox/releases/115.11.0esr/linux-x86_64/pt-BR/firefox-115.11.0esr.tar.bz2
+           tar -xjf firefox-esr.tar.bz2
+           sudo mv firefox /opt/firefox
+           sudo ln -sf /opt/firefox/firefox /usr/bin/firefox
 
-         # Instala GeckoDriver compatível
-         GECKO_VERSION=$(curl -s https://api.github.com/repos/mozilla/geckodriver/releases/latest | grep '"tag_name":' | sed -E 's/.*"v([^"]+)".*/\1/')
-         wget https://github.com/mozilla/geckodriver/releases/download/v$GECKO_VERSION/geckodriver-v$GECKO_VERSION-linux64.tar.gz
-         tar -xzf geckodriver-v$GECKO_VERSION-linux64.tar.gz
-         chmod +x geckodriver
-         sudo mv geckodriver /usr/local/bin/
+           # Instala GeckoDriver mais recente
+           GECKO_VERSION=$(curl -s https://api.github.com/repos/mozilla/geckodriver/releases/latest | grep '"tag_name":' | sed -E 's/.*"v([^"]+)".*/\1/')
+           wget https://github.com/mozilla/geckodriver/releases/download/v$GECKO_VERSION/geckodriver-v$GECKO_VERSION-linux64.tar.gz
+           tar -xzf geckodriver-v$GECKO_VERSION-linux64.tar.gz
+           chmod +x geckodriver
+           sudo mv geckodriver /usr/local/bin/
 
       - name: Rodar testes Robot em paralelo com Xvfb
         id: run_tests
