--- a/.github/workflows/robot-tests.yml
+++ b/.github/workflows/robot-tests.yml
@@ -1,8 +1,8 @@
 name: Run Robot Tests in Parallel
 
 on:
-  schedule:
-    - cron: '0 7 * * *'    # Executa todos os dias às 07:00 UTC
+  # schedule:
+  #   - cron: '0 7 * * *'    # Executa todos os dias às 07:00 UTC
   workflow_dispatch:
     inputs:
       module:
