--- a/.github/workflows/robot-tests.yml
+++ b/.github/workflows/robot-tests.yml
@@ -2,13 +2,13 @@ name: Run Robot Tests in Parallel
 
 on:
   # schedule:
-  #   - cron: '0 7 * * *'    # Executa todos os dias às 07:00 UTC
+  #   - cron: '0 7 * * *'
   workflow_dispatch:
     inputs:
       module:
-        description: 'Digite o nome da suíte/pasta a executar (ex: CN05-Estimativa) ou deixe vazio para rodar tudo'
+        description: "Digite o nome da suíte/pasta a executar (ex: CN05-Estimativa) ou deixe vazio para rodar tudo"
         required: false
-        default: ''
+        default: ""
 
 jobs:
   test:
@@ -24,28 +24,25 @@ jobs:
       - name: Configurar Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: "3.10"
 
       - name: Instalar dependências do sistema
         run: |
           set -euxo pipefail
           sudo apt-get update
-          sudo apt-get install -y \
-            wget curl unzip xvfb \
+          sudo apt-get install -y wget curl unzip xvfb \
             libglib2.0-0 libnss3 libfontconfig1 libxss1 libasound2t64 \
             ca-certificates gnupg
 
-      - name: Instalar dependências Python (Robot + Pabot + libs do projeto)
+      - name: Instalar dependências Python (Robot + Pabot + projeto)
         run: |
-          pip install --upgrade pip
-          # Garante Robot + Pabot
+          set -euxo pipefail
+          python -m pip install --upgrade pip
           pip install robotframework robotframework-pabot
-          # Suas dependências
           if [ -f requirements.txt ]; then
             pip install -r requirements.txt
           fi
 
-      # ---- CHROME (repositório oficial Google) ----
       - name: Instalar Google Chrome stable
         run: |
           set -euxo pipefail
@@ -57,7 +54,6 @@ jobs:
           sudo apt-get install -y google-chrome-stable
           google-chrome --version
 
-      # ---- FIREFOX + GECKODRIVER via APT (mais estável que URL fixa) ----
       - name: Instalar Firefox e Geckodriver
         run: |
           set -euxo pipefail
@@ -65,23 +61,15 @@ jobs:
           firefox --version || true
           geckodriver --version
 
-      # Se você usa Selenium 4.6+ com SeleniumLibrary, o Selenium Manager
-      # baixa o driver automaticamente. Com Chrome instalado, Chromedriver
-      # não é obrigatório. Se preferir, você pode manter um passo de
-      # Chromedriver, mas normalmente não precisa.
-
       - name: Rodar testes Robot em paralelo com Xvfb
         id: run_tests
-        shell: bash
         run: |
           set -euxo pipefail
 
-          # Inicia X virtual
           Xvfb :99 -screen 0 1920x1080x24 > /dev/null 2>&1 &
           XVFB_PID=$!
           export DISPLAY=:99
 
-          # Define qual suíte executar
           if [ -n "${{ github.event.inputs.module }}" ]; then
             echo "Executando somente a suíte: ${{ github.event.inputs.module }}"
             TARGET_SUITE=$(find TestCases -iname "*${{ github.event.inputs.module }}*.robot" | head -n 1 || true)
@@ -97,7 +85,6 @@ jobs:
 
           echo "Arquivo alvo: $TARGET_SUITE"
 
-          # Execuções com retry (pabot)
           pabot --processes 4 --output output1.xml "$TARGET_SUITE" || true
           pabot --processes 2 --rerunfailed output1.xml --output output2.xml "$TARGET_SUITE" || true
           pabot --processes 1 --rerunfailed output2.xml --output output3.xml "$TARGET_SUITE" || true
@@ -105,18 +92,12 @@ jobs:
           kill $XVFB_PID
 
       - name: Preparar merge e gerar relatórios (Robot + JUnit)
-        shell: bash
         run: |
           set -euxo pipefail
 
-          # Lista para debug (não falha se não houver match)
-          ls -la || true
-          ls -la *.xml || true
-
-          # Monta dinamicamente o array de arquivos a mesclar
           FILES=()
           for f in output1.xml output2.xml output3.xml; do
-            if [[ -f "$f" ]]; then
+            if [ -f "$f" ]; then
               echo "Incluindo $f na mescla"
               FILES+=("$f")
             else
@@ -129,56 +110,45 @@ jobs:
             exit 1
           fi
 
-          # Merge dos outputs
           rebot --merge --output merged_output.xml "${FILES[@]}"
-
-          # Gera Log/Report
           rebot --log log.html --report report.html merged_output.xml
-
-          # Gera também JUnit para contagem confiável de falhas
           rebot --xunit xunit.xml merged_output.xml
 
       - name: Checar tolerância de falhas (8%)
-        shell: bash
         run: |
-          set -euxo pipefail
-          python3 - << 'PY'
-import xml.etree.ElementTree as ET
-from math import ceil
+          set -euo pipefail
+          # Extrai atributos do testsuite do JUnit (sem Python, evita problema de YAML)
+          total=$(grep -oP '(?<=tests=")[0-9]+' xunit.xml | head -n1 || echo 0)
+          failures=$(grep -oP '(?<=failures=")[0-9]+' xunit.xml | head -n1 || echo 0)
+          errors=$(grep -oP '(?<=errors=")[0-9]+' xunit.xml | head -n1 || echo 0)
+          failed=$((failures + errors))
 
-tree = ET.parse('xunit.xml')
-ts = tree.find('testsuite')
+          echo "TOTAL_TESTES=$total"
+          echo "FALHAS=$failed"
 
-total = int(ts.attrib.get('tests', '0'))
-failures = int(ts.attrib.get('failures', '0'))
-errors = int(ts.attrib.get('errors', '0'))
-failed = failures + errors
+          # Limite = ceil(8% de total) -> (total*8 + 99)/100
+          if [ "$total" -eq 0 ]; then
+            echo "::error ::Nenhum teste encontrado no JUnit (xunit.xml)."
+            exit 1
+          fi
 
-# Limite de 8% (verde se <= 8%, vermelho se > 8%)
-limite_float = total * 0.08 if total else 0.0
-# Arredonda para cima para não punir com uma fração (ex.: 26.08 -> 27)
-limite = ceil(limite_float)
+          limit=$(( (total * 8 + 99) / 100 ))
+          pct=$(( failed * 10000 / total )) # base 100.00
+          int=$(( pct / 100 ))
+          frac=$(( pct % 100 ))
 
-taxa = (failed / total * 100.0) if total else 0.0
+          echo "TAXA_FALHA=${int}.${frac}%"
+          echo "LIMITE_8pct=${limit} falhas"
 
-print(f"TOTAL_TESTES={total}")
-print(f"FALHAS={failed}")
-print(f"TAXA_FALHA={taxa:.2f}%")
-print(f"LIMITE_8pct={limite} falhas (ceil de {limite_float:.2f})")
+          # Se quiser fixar em 326 testes, descomente:
+          # total=326; limit=$(( (total * 8 + 99) / 100 )); echo "LIMITE_FIXO_326=${limit}"
 
-# Se quiser 'fixar' em 326 testes independentemente do JUnit, use:
-# TOTAL_FIXO = 326
-# limite_fixo = ceil(TOTAL_FIXO * 0.08)
-# print(f\"LIMITE_FIXO(326)={limite_fixo}\")
-# e compare 'failed' contra 'limite_fixo' em vez de 'limite'.
-
-if failed > limite:
-    print("::error ::Mais de 8% de falhas - reprovando o job.")
-    raise SystemExit(1)
-else:
-    print("Dentro da tolerância de 8% - mantendo o job VERDE.")
-    raise SystemExit(0)
-PY
+          if [ "$failed" -gt "$limit" ]; then
+            echo "::error ::Mais de 8% de falhas - reprovando o job."
+            exit 1
+          else
+            echo "Dentro da tolerância de 8% - mantendo o job VERDE."
+          fi
 
       - name: Upload Artifacts
         if: always()
@@ -193,4 +163,3 @@ PY
             log.html
             report.html
             xunit.xml
-
